<resources>
    <string name="app_name">Smart Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="tab_layout">TabLayout</string>
    <string name="imageview">ImageView</string>
    <string name="star">Star</string>
    <string name="load_data_failed">Load data failed</string>
    <string name="message_load_failed">Can\'t get data from server, please try again later</string>
    <string name="reload">Reload</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="top_rated">Top Rated</string>
    <string name="chevron_right">ChevronRight</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="cancel">Cancel</string>
    <string name="rating_bar">RatingBar</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar movies</string>
    <string name="time">1h, 25mins</string>
</resources>