<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DADADA"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_data_failed"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/message_load_failed"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#9CA3A3"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvReload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reload"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#2196F3"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>