<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="15dp"
    android:layout_marginHorizontal="20dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:id="@+id/itemMovieGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageview"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/baseline_star_gray_24"
            android:contentDescription="@string/star" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivImage"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:layout_below="@+id/tvMovieName"
            android:layout_marginBottom="5dp"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>