<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/itemMovieMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageview"
            android:adjustViewBounds="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/baseline_star_gray_24"
                android:contentDescription="@string/star" />

            <TextView
                android:id="@+id/tvMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_below="@+id/tvMovieName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvTime"
                android:maxLines="5"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>