<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".movie.fragment.search.SearchFragment">

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/baseline_search_teal_24"
        android:contentDescription="@string/imageview"
        app:layout_constraintTop_toTopOf="@+id/tvSearch"
        app:layout_constraintBottom_toBottomOf="@+id/tvSearch"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toTopOf="@+id/edtSearch"
        app:layout_constraintBottom_toBottomOf="@+id/edtSearch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSearch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_edt_search"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        android:hint="@string/search"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/tvCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcMovieSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="#EDEDED"
        app:layout_constraintTop_toBottomOf="@+id/edtSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressLoading"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>