<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".movie.fragment.discover.MoviesFragment"
    android:background="#EDEDED">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutSeeAllPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tvPopular"
                app:layout_constraintBottom_toBottomOf="@+id/tvPopular"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvSeeAllPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700" />

                <ImageView
                    android:id="@+id/ivChevronPopular"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_chevron_right_24"
                    android:contentDescription="@string/chevron_right" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcMoviePopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPopular"/>

            <TextView
                android:id="@+id/tvTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rcMoviePopular"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutSeeAllTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tvTopRated"
                app:layout_constraintBottom_toBottomOf="@+id/tvTopRated"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvSeeAllTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700" />

                <ImageView
                    android:id="@+id/ivChevronTopRated"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_chevron_right_24"
                    android:contentDescription="@string/chevron_right" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcMovieTopRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTopRated" />

            <TextView
                android:id="@+id/tvUpComing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_coming"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rcMovieTopRated"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutSeeAllUpComing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tvUpComing"
                app:layout_constraintBottom_toBottomOf="@+id/tvUpComing"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvSeeAllUpComing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700" />

                <ImageView
                    android:id="@+id/ivChevronUpComing"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_chevron_right_24"
                    android:contentDescription="@string/chevron_right" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcMovieUpComing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUpComing"/>

            <TextView
                android:id="@+id/tvNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rcMovieUpComing"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/layoutSeeAllNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tvNowPlaying"
                app:layout_constraintBottom_toBottomOf="@+id/tvNowPlaying"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvSeeAllNowPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700" />

                <ImageView
                    android:id="@+id/ivChevronNowPlaying"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_chevron_right_24"
                    android:contentDescription="@string/chevron_right" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcMovieNowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNowPlaying" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>