<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".movie.fragment.detail.DetailFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_chevron_left_24"
        android:contentDescription="@string/imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMovieDetail"
        app:layout_constraintBottom_toBottomOf="@+id/tvMovieDetail" />

    <TextView
        android:id="@+id/tvMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_detail"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/imageview"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieDetail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/ivImage"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvGenres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:numStars="5"
        android:rating="4"
        android:contentDescription="@string/rating_bar"
        android:stepSize="0.1"
        style="?android:attr/ratingBarStyleIndicator"
        android:theme="@style/RatingBar"
        app:layout_constraintTop_toBottomOf="@+id/tvGenres"
        app:layout_constraintStart_toEndOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@+id/rating"
        app:layout_constraintBottom_toBottomOf="@+id/rating"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguage"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scvDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cast"
                        android:textColor="@color/teal_700"
                        android:textSize="20sp" />

                    <View
                        android:id="@+id/viewCast"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/teal_700" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSimilarMovies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/similar_movies"
                        android:textColor="#C4C4C4"
                        android:textSize="20sp" />

                    <View
                        android:id="@+id/viewSimilarMovies"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/teal_700"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#EDEDED" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcSimilarMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#EDEDED"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressLoading"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>